--- a/Resume.tex
+++ b/Resume.tex
@@ -1,5 +1,5 @@
-\documentclass[11pt,a4paper]{moderncv}
-%possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+\documentclass[11.5pt,a4paper]{moderncv}
+
 \moderncvstyle{casual}
 \moderncvcolor{blue}
 \nopagenumbers{}
@@ -21,7 +21,7 @@
 
 \usepackage{fontspec}
 \usepackage{fontawesome}
-\usepackage[scale=0.92, left=1cm, right=1cm]{geometry}
+\usepackage[scale=1, top=1cm, left=0.8cm, right=0.8cm]{geometry}
 
 \setmainfont[Path = fonts/lato/,BoldItalicFont=OpenSans-Italic,BoldFont=OpenSans-Regular,ItalicFont=Lato-LigIta]{Lato-Lig}
 
@@ -38,15 +38,15 @@
 \begin{document}
 
 \namesection{Sameet}{Sapra}{
-\urlstyle{same}\faGlobe{ \url{ http://sameetsapra.com}} \\
-\faEnvelope{ ssapra2@illinois.edu} | \faPhone{ 630.696.1597} | \faGithub{ sameetandpotatoes}}
+\urlstyle{same} http://sameetsapra.com \\
+ssapra2@illinois.edu | 630.696.1597 | sameetandpotatoes}
 
 \section{Education}
 
 \cventry{Expected 2019}{University of Illinois at Urbana Champaign}{GPA: 3.93/4.0}{}{}{
 \begin{itemize}
-\item Bachelor of Science in Computer Science, Minor in Mathematical Statistics
-\item Coursework: Algorithms and Graph Theory, Systems Programming, Data Structures, Computer Architecture, Artificial Intelligence, Databases, Programming Languages and Compilers
+\item M.C.S in Computer Science, B.S in Computer Science, Minor in Mathematical Statistics
+\item Coursework: Algorithms and Graph Theory, Distributed Systems, Computer Security, Systems Programming, Data Structures, Computer Architecture, Artificial Intelligence, Databases
 \item Honors: James Scholar, Dean's List
 \end{itemize}}
 
@@ -58,11 +58,12 @@
 
 \section{Experience}
 
-\entry[0.10em]{May 2017 - Present}{Software Engineering Intern}{Cask Data}{Palo Alto}{CA}{
-\mybitem{\textit{Java} \textasciitilde \textit{5,000 lines}}
+\entry[0.10em]{Summer 2017}{Software Engineer Intern}{Cask Data}{Palo Alto}{CA}{
+\mybitem{\textit{Java, Maven} \textasciitilde \textit{8,000 lines}}
 \begin{itemize}
-  \item Add the ability to trigger programs based on other program statuses on Cask CDAP, a data application platform for building big data applications on top of a distributed environment
-  \item Direct the use case, API design, and refactor program state management on the platform
+  \item Test and help release version 4.2 of CDAP, a data application platform for building big data applications on top of a local, distributed, or cloud sandbox environment
+  \item Add the ability to schedule data pipelines based on the status of other pipelines on CDAP
+  \item Implement transactional recording of all program states on the platform using Apache Twill
 \end{itemize}}
 
 \entry[0.10em]{Fall 2015 - December 2016}{Full Stack Web Developer}{Cognitive Computation Group}{Champaign}{IL}{
@@ -76,7 +77,7 @@
 \mybitem{\textit{Ruby, Rails, Java, AWS, React.js} \textasciitilde \textit{20,000 lines}}
 \begin{itemize}
 \item Directed front end team to migrate to React and Redux and incorporate a component-based architecture
-\item Interfaced with Lambda services on AWS to enroll new users onto the platform
+\item Interfaced with SQS and Lambda services on AWS to enroll new users onto the platform
 \item Refactored financial institution data import stack in Ruby to securely store confidential user information
 \item Built internal dashboard with PivotalTracker's API to track progress for major milestones
 \end{itemize}}
@@ -87,12 +88,12 @@
 %   \item Documented sample packets for network protocols
 % \end{itemize}}
 
-\entry{Summer 2015}{Front End Engineer Intern}{SimpleRelevance}{Chicago}{IL}{
+\entry{Summer 2015}{Frontend Engineer Intern}{SimpleRelevance}{Chicago}{IL}{
 \mybitem{\textit{Python, Django, React.js, Backbone.js} \textasciitilde \textit{100,000 lines}}
 \begin{itemize}
 \item Overhauled the website dashboard with React.js and Flux architecture
-\item Constructed adjustable graphs and daily reports to export data as a pdf or csv
-\item Optimized website for all mobile devices and browsers, improving page load speed by 25\%
+\item Constructed adjustable graphs and daily reports to export metrics data as a pdf or csv
+\item Optimized website content for mobile devices and browsers, reducing page load time by 25\%
 \end{itemize}}
 
 %\cventry{May 2014 - September 2014}{Mobile Developer}{UEvents}{Chicago}{IL}{
@@ -105,7 +106,7 @@
 
 \cventry[0.10em]{September 2016 - Present}{Lead Project Groot Website Developer}{}{}{}{
 \begin{itemize}
-  \item Develop web application to manage access to student resumes and replace core UIUC's ACM infrastructure
+  \item Develop web application to manage access to student resumes and replace UIUC's core student infrastructure
   \item Use a service-oriented architecture to encourage independent and reusable components
 \end{itemize}}
 
