--- a/Resume.tex
+++ b/Resume.tex
@@ -93,7 +93,6 @@ ssapra2@illinois.edu | 630.696.1597 | sameetandpotatoes}
 \begin{itemize}
 \item Overhauled the website dashboard with React.js and Flux architecture
 \item Constructed adjustable graphs and daily reports to export metrics data as a pdf or csv
-\item Optimized website content for mobile devices and browsers, reducing page load time by 25\%
 \end{itemize}}
 
 %\cventry{May 2014 - September 2014}{Mobile Developer}{UEvents}{Chicago}{IL}{
@@ -118,8 +117,7 @@ ssapra2@illinois.edu | 630.696.1597 | sameetandpotatoes}
 
 \cventry[0.10em]{February 2016}{UIUC HackIllinois - Open Source Division}{}{}{}{
 \begin{itemize}
-  \item Built a backend Java application to assess a user's credibility and store user registration information to help in allocating computing resources for Apache Airavata
-  \item Recognized as a top 3 open source project
+  \item Built a backend Java application to assess a user's credibility and store user registration information to help in allocating computing resources for Apache Airavata, becoming a top 3 open source project at the hackathon
 \end{itemize}}
 
 \cventry[0.10em]{January 2016}{Search Engine for Recipes}{}{}{}{
