Push some wording updates

--- a/Resume.tex
+++ b/Resume.tex
@@ -1,4 +1,4 @@
-\documentclass[11.5pt,a4paper]{moderncv}
+\documentclass[11.8pt,a4paper]{moderncv}
 
 \moderncvstyle{casual}
 \moderncvcolor{blue}
@@ -21,7 +21,7 @@
 
 \usepackage{fontspec}
 \usepackage{fontawesome}
-\usepackage[scale=1, top=1cm, left=0.8cm, right=0.8cm]{geometry}
+\usepackage[scale=1, top=1cm, left=0.7cm, right=0.7cm]{geometry}
 
 \setmainfont[Path = fonts/lato/,BoldItalicFont=OpenSans-Italic,BoldFont=OpenSans-Regular,ItalicFont=Lato-LigIta]{Lato-Lig}
 
@@ -39,27 +39,35 @@
 
 \namesection{Sameet}{Sapra}{
 \urlstyle{same} http://sameetsapra.com \\
-ssapra2@illinois.edu | 630.696.1597 | sameetandpotatoes}
+sameetandpotatoes@gmail.com}
 
 \section{Education}
 
-\cventry{Expected 2019}{University of Illinois at Urbana Champaign}{GPA: 3.95/4.0}{}{}{
+\cventry{Fall 2015 - May 2019}{University of Illinois at Urbana Champaign}{GPA: 3.95/4.0}{}{}{
 \begin{itemize}
 \item M.C.S in Computer Science, B.S in Computer Science, Minor in Mathematical Statistics
-\item Coursework: Algorithms and Graph Theory, Distributed Systems, Computer Security, Systems Programming, Data Structures, Computer Architecture, Artificial Intelligence, Databases
+\item Coursework: Algorithms and Graph Theory, Distributed Systems, Computer Security, Networking, Systems Programming, Data Structures, Computer Architecture, Artificial Intelligence, Databases
 \item Honors: James Scholar, Dean's List
 \end{itemize}}
 
 \section{Programming Languages}
 
 \cvdoubleitem{High Level}{Python, Java, Ruby, C++}{System}{C, Bash, MIPS Assembly}
-\cvdoubleitem{Web}{SQL, Rails, React.js, Django, Angular.js}{Math}{numpy, LaTeX, Mathematica}
+\cvdoubleitem{Web}{SQL, Rails, React.js, Django, Angular.js}{Math}{numpy, LaTeX}
 \cvdoubleitem{Hardware}{Arduino, Raspberry Pi}{Tools}{Git, ViM, AWS, Tensorflow}
 
 \section{Experience}
 
+\entry[0.10em]{Summer 2018}{Software Engineer Intern}{Facebook}{Menlo Park}{CA}{
+\mybitem{\textit{Haskell, C++, Python}}
+\begin{itemize}
+    \item Support feature aggregation to enable a 10-fold increase in reach across data warehouse
+    \item Develop scanner to efficiently sample Cassandra tiers record features on column families
+    \item Record feature counts to identify and label user data on a data discovery platform
+\end{itemize}}
+
 \entry[0.10em]{Summer 2017}{Software Engineer Intern}{Cask Data}{Palo Alto}{CA}{
-\mybitem{\textit{Java, Maven} \textasciitilde \textit{8,000 lines}}
+\mybitem{\textit{Java, Maven}}
 \begin{itemize}
   \item Test and help release version 4.2 of CDAP, a data application platform for building big data applications on top of a local, distributed, or cloud sandbox environment
   \item Add the ability to schedule data pipelines based on the status of other pipelines on CDAP
@@ -67,29 +75,29 @@ ssapra2@illinois.edu | 630.696.1597 | sameetandpotatoes}
 \end{itemize}}
 
 \entry[0.10em]{Fall 2015 - December 2016}{Full Stack Web Developer}{Cognitive Computation Group}{Champaign}{IL}{
-\mybitem{\textit{Angular.js, PHP} \textasciitilde \textit{5,000 lines}}
+\mybitem{\textit{Angular.js, PHP}}
 \begin{itemize}
 \item Refactor the research tools and demos on the website in PHP and Angular.js
 \item Improve the performance and reliability of the content management system for website administrators
 \end{itemize}}
 
 \entry[0.10em]{Summer 2016}{Software Engineer Intern}{NextCapital}{Chicago}{IL}{
-\mybitem{\textit{Ruby, Rails, Java, AWS, React.js} \textasciitilde \textit{20,000 lines}}
+\mybitem{\textit{Ruby on Rails, Java, React.js}}
 \begin{itemize}
 \item Directed front end team to migrate to React and Redux and incorporate a component-based architecture
 \item Interfaced with SQS and Lambda services on AWS to enroll new users onto the platform
 \item Refactored financial institution data import stack in Ruby to securely store confidential user information
-\item Built internal dashboard with PivotalTracker's API to track progress for major milestones
+%\item Built internal dashboard with PivotalTracker's API to track progress for major milestones
 \end{itemize}}
 
 % \entry[0.10em]{Fall 2015 - Spring 2016}{Undergraduate Research Assistant}{Department of Computer Science}{Champaign}{IL}{
-% \mybitem{\textit{C++, Networking} \textasciitilde \textit{1,000 lines}}
+% \mybitem{\textit{C++, Networking}}
 % \begin{itemize}
 %   \item Documented sample packets for network protocols
 % \end{itemize}}
 
 \entry{Summer 2015}{Frontend Engineer Intern}{SimpleRelevance}{Chicago}{IL}{
-\mybitem{\textit{Python, Django, React.js, Backbone.js} \textasciitilde \textit{100,000 lines}}
+\mybitem{\textit{Django, React.js, Backbone.js}}
 \begin{itemize}
 \item Overhauled the website dashboard with React.js and Flux architecture
 \item Constructed adjustable graphs and daily reports to export metrics data as a pdf or csv
@@ -115,10 +123,10 @@ ssapra2@illinois.edu | 630.696.1597 | sameetandpotatoes}
   \item Managed projects such as analyzing presidential election outcomes with respect to different global issues
 \end{itemize}}
 
-\cventry[0.10em]{February 2016}{UIUC HackIllinois - Open Source Division}{}{}{}{
-\begin{itemize}
-  \item Built a backend Java application to assess a user's credibility and store user registration information to help in allocating computing resources for Apache Airavata, becoming a top 3 open source project at the hackathon
-\end{itemize}}
+%\cventry[0.10em]{February 2016}{UIUC HackIllinois - Open Source Division}{}{}{}{
+%\begin{itemize}
+%  \item Built a backend Java application to assess a user's credibility and store user registration information to help in allocating computing resources for Apache Airavata, becoming a top 3 open source project at the hackathon
+%\end{itemize}}
 
 \cventry[0.10em]{January 2016}{Search Engine for Recipes}{}{}{}{
 \begin{itemize}
