--- a/moderncv.cls
+++ b/moderncv.cls
@@ -1,5 +1,5 @@
 %% start of file `moderncv.cls'.
-%% Copyright 2006-2013 Xavier Danaux (xdanaux@gmail.com).
+%% Copyright 2006-2015 Xavier Danaux (xdanaux@gmail.com).
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License version 1.3c,
@@ -10,14 +10,39 @@
 %                identification
 %-------------------------------------------------------------------------------
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{moderncv}[2013/02/09 v1.3.0 modern curriculum vitae and letter document class]
+\ProvidesClass{moderncv}[2015/07/28 v2.0.0 modern curriculum vitae and letter document class]
 
 
-
+%-------------------------------------------------------------------------------
+%                class options
+%
+% (need to be done before the external package loading, for example because
+% we need \paperwidth, \paperheight and \@ptsize to be defined before loading
+% geometry and fancyhdr)
+%-------------------------------------------------------------------------------
 % paper size option
 \DeclareOption{a4paper}{
   \setlength\paperheight{297mm}
   \setlength\paperwidth{210mm}}
+\DeclareOption{a5paper}{
+  \setlength\paperheight{210mm}
+  \setlength\paperwidth{148mm}}
+\DeclareOption{b5paper}{
+  \setlength\paperheight{250mm}
+  \setlength\paperwidth{176mm}}
+\DeclareOption{letterpaper}{
+  \setlength\paperheight{11in}
+  \setlength\paperwidth{8.5in}}
+\DeclareOption{legalpaper}{
+  \setlength\paperheight{14in}
+  \setlength\paperwidth{8.5in}}
+\DeclareOption{executivepaper}{
+  \setlength\paperheight{10.5in}
+  \setlength\paperwidth{7.25in}}
+\DeclareOption{landscape}{
+  \setlength\@tempdima{\paperheight}
+  \setlength\paperheight{\paperwidth}
+  \setlength\paperwidth{\@tempdima}}
 
 % font size options
 \newcommand\@ptsize{}
@@ -56,20 +81,20 @@
 % TODO: move to xifthen and \isempty{<arg>} instead of \equal{<arg>}{}
 
 % color
-\RequirePackage{xcolor}
+\RequirePackage[table]{xcolor}
 
 % font loading
-%\RequirePackage{ifxetex,ifluatex}
-%\newif\ifxetexorluatex
-%\ifxetex
-%  \xetexorluatextrue
-%\else
-%  \ifluatex
-%    \xetexorluatextrue
-%  \else
-%    \xetexorluatexfalse
-%  \fi
-%\fi
+\RequirePackage{ifxetex,ifluatex}
+\newif\ifxetexorluatex
+\ifxetex
+  \xetexorluatextrue
+\else
+  \ifluatex
+    \xetexorluatextrue
+  \else
+    \xetexorluatexfalse
+  \fi
+\fi
 % automatic loading of latin modern fonts
 %\ifxetexorluatex
 %  \RequirePackage{fontspec}
@@ -102,7 +127,7 @@
 %    pdfproducer   = {\LaTeX{}},% will/should be set automatically to the correct TeX engine used
     bookmarksopen = true,
     bookmarksdepth= 2
-}}
+    }}
 
 % graphics
 \RequirePackage{graphicx}
@@ -118,6 +143,8 @@
 \newcommand*{\nopagenumbers}{\@displaypagenumbersfalse}
 \AtEndPreamble{%
   \AtBeginDocument{%
+    % fancyhdr length
+    \renewcommand{\headwidth}{\textwidth}
     \if@displaypagenumbers%
       \@ifundefined{r@lastpage}{}{%
         \ifthenelse{\pageref{lastpage}>1}{%
@@ -125,13 +152,13 @@
           \settowidth{\pagenumberwidth}{\color{color2}\addressfont\itshape\strut\thepage/\pageref{lastpage}}%
           \fancypagestyle{plain}{%
             \fancyfoot[r]{\parbox[b]{\pagenumberwidth}{\color{color2}\pagenumberfont\strut\thepage/\pageref{lastpage}}}}% the parbox is required to ensure alignment with a possible center footer (e.g., as in the casual style)
-          \pagestyle{plain}}{}}%
-      \AtEndDocument{\label{lastpage}}\else\fi}}
+          \pagestyle{plain}}{}}\fi}%
+  \AtEndDocument{\label{lastpage}}}
 \pagestyle{plain}
 
 % reduced list spacing
 % package providing hooks into lists
-%   originally developped by Jakob Schiøtz (see http://dcwww.camd.dtu.dk/~schiotz/comp/LatexTips/tweaklist.sty)
+%   originally developped by Jakob Schiotz (see http://dcwww.camd.dtu.dk/~schiotz/comp/LatexTips/tweaklist.sty)
 %   modified and distributed with moderncv(not available otherwise on ctan)
 \RequirePackage{tweaklist}
 \renewcommand*{\itemhook}{%
@@ -155,9 +182,13 @@
 % micro-typography (e.g., character protrusion, font expansion, hyphenatable letterspacing)
 \RequirePackage{microtype}
 
+% stack of key-value elements, used to save personal information
+\RequirePackage{moderncvcollection}
+
 % compatibility package with older versions of moderncv
 \RequirePackageWithOptions{moderncvcompatibility}
 
+\RequirePackage{l3regex}
 
 %-------------------------------------------------------------------------------
 %                class definition
@@ -175,44 +206,110 @@
 \setlength\arrayrulewidth{.4\p@}
 \setlength\doublerulesep{2\p@}
 
+% not set on purpose
+%\setlength\arraycolsep{5\p@}
+%\setlength\tabcolsep{6\p@}
+%\setlength\tabbingsep{\labelsep}
+
 \raggedbottom
 \onecolumn
 
 
+%-------------------------------------------------------------------------------
+%                overall design commands definitions
+%-------------------------------------------------------------------------------
+% elements
+%---------
+% defines one's name
+% usage: \name{<firstname>}{<lastname>}
+%\newcommand*{\name}[2]{\def\@firstname{#1}\def\@lastname{#2}}
 
-\NewDocumentCommand{\address}{mG{}G{}}{\def\@addressstreet{#1}\def\@addresscity{#2}\def\@addresscountry{#3}}
-% adds a mobile/fixed/fax number to one's personal information (optional)
+% defines one's title (optional)
+% usage: \title{<title>}
+%\renewcommand*{\title}[1]{\def\@title{#1}}
+
+% defines one's address (optional)
+% usage: \address{<street>}{<city>}{<country>}
+% where the <city> and <country> arguments can be omitted or provided empty
+%\NewDocumentCommand{\address}{mG{}G{}}{\def\@addressstreet{#1}\def\@addresscity{#2}\def\@addresscountry{#3}}
+
+% defines one's email (optional)
+% usage: \email{<email adress>}
+\newcommand*{\email}[1]{\def\@email{#1}}
+
+% defines one's home page (optional)
+% usage: \homepage{<url>}
+\newcommand*{\homepage}[1]{\def\@homepage{#1}}
+
+% adds a fixed/mobile/fax number to one's personal information (optional)
 % usage: \phone[<optional type>]{<number>}
-% where <optional type> should be either "mobile", "fixed" or "fax
-\RequirePackage{collection}
+% where <optional type> should be either "fixed" (default), "mobile" or "fax
 \collectionnew{phones}
+\NewDocumentCommand{\phone}{O{fixed}m}{%
+  \ifthenelse{\equal{#1}{fax}}%
+    {\collectionadd[#1]{phones}{#2}}
+    {\collectionadd[#1]{phones}{\protect\tellink{#2}}}
+    }
+
+
+% adds a social link to one's personal information (optional)
+% usage: \social[<optional type>][<optional url>]{<account name>}
+% where <optional type> should be either "linkedin", "xing", "twitter", "github", "gitlab" or "skype"
+\collectionnew{socials}
+\NewDocumentCommand{\social}{O{}O{}m}{%
+  \ifthenelse{\equal{#2}{}}%
+    {%
+      \ifthenelse{\equal{#1}{linkedin}}{\collectionadd[linkedin]{socials}{\protect\httplink[#3]{www.linkedin.com/in/#3}}} {}%
+      \ifthenelse{\equal{#1}{xing}}    {\collectionadd[xing]{socials}    {\protect\httplink[#3]{www.xing.com/profile/#3}}}{}%
+      \ifthenelse{\equal{#1}{twitter}} {\collectionadd[twitter]{socials} {\protect\httplink[#3]{www.twitter.com/#3}}}     {}%
+      \ifthenelse{\equal{#1}{github}}  {\collectionadd[github]{socials}  {\protect\httplink[#3]{www.github.com/#3}}}      {}%
+      \ifthenelse{\equal{#1}{gitlab}}  {\collectionadd[gitlab]{socials}  {\protect\httplink[#3]{www.gitlab.com/#3}}}      {}%
+      \ifthenelse{\equal{#1}{skype}}   {\collectionadd[skype]{socials}   {#3}}                                            {}%
+    }
+    {\collectionadd[#1]{socials}{\protect\httplink[#3]{#2}}}}
+
+% defines additional personal information (optional)
+% usage: \extrainfo{<text>}
+\newcommand*{\extrainfo}[1]{\def\@extrainfo{#1}}
 
 % colors
+%-------
 \definecolor{color0}{rgb}{0,0,0}% main default color, normally left to black
-\definecolor{color1}{rgb}{0,0,0}% primary theme color
-\definecolor{color2}{rgb}{0,0,0}% secondary theme color
-\definecolor{color3}{rgb}{0,0,0}% tertiary theme color
+\definecolor{color1}{rgb}{0,0,0}% primary scheme color
+\definecolor{color2}{rgb}{0,0,0}% secondary scheme color
+\definecolor{color3}{rgb}{0,0,0}% tertiary scheme color
 
 % symbols
-%   itemize labels (the struts were added to correct inter-item spacing (works for single line items, until a solution is found for multi-line ones...)
-\newcommand*{\labelitemi}{\strut\textcolor{color1}{\large\rmfamily\textbullet}}% the \rmfamily is required to force Latin Modern fonts when using sans serif, as OMS/lmss/m/n is not defined and gets substituted by OMS/cmsy/m/n
-\newcommand*{\labelitemii}{\strut\textcolor{color1}{\large\bfseries-}}
-\newcommand*{\labelitemiii}{\strut\textcolor{color1}{\rmfamily\textperiodcentered}}% alternative: \textasteriskcentered; the \rmfamily is required to force Latin Modern fonts when using sans serif, as OMS/lmss/m/n is not defined and gets substituted by OMS/cmsy/m/n
-\newcommand*{\labelitemiv}{\labelitemiii}
-%   enumerate labels
-\renewcommand{\theenumi}{\@arabic\c@enumi}
-\renewcommand{\theenumii}{\@alph\c@enumii}
-\renewcommand{\theenumiii}{\@roman\c@enumiii}
-\renewcommand{\theenumiv}{\@Alph\c@enumiv}
-%   other symbols
-\newcommand*{\listitemsymbol}{\labelitemi~}
-\newcommand*{\addresssymbol}{}
-\newcommand*{\mobilephonesymbol}{}
-\newcommand*{\fixedphonesymbol}{}
-\newcommand*{\faxphonesymbol}{}
-\newcommand*{\emailsymbol}{}
-\newcommand*{\homepagesymbol}{}
+%--------
+% itemize labels (the struts were added to correct inter-item spacing (works for single line items, until a solution is found for multi-line ones...)
+\newcommand*{\labelitemi}          {\strut\textcolor{color1}{\large\rmfamily\textbullet}}% the \rmfamily is required to force Latin Modern fonts when using sans serif, as OMS/lmss/m/n is not defined and gets substituted by OMS/cmsy/m/n
+\newcommand*{\labelitemii}         {\strut\textcolor{color1}{\large\bfseries-}}
+\newcommand*{\labelitemiii}        {\strut\textcolor{color1}{\rmfamily\textperiodcentered}}% alternative: \textasteriskcentered; the \rmfamily is required to force Latin Modern fonts when using sans serif, as OMS/lmss/m/n is not defined and gets substituted by OMS/cmsy/m/n
+\newcommand*{\labelitemiv}         {\labelitemiii}
 
+% enumerate labels
+\renewcommand{\theenumi}           {\@arabic\c@enumi}
+\renewcommand{\theenumii}          {\@alph\c@enumii}
+\renewcommand{\theenumiii}         {\@roman\c@enumiii}
+\renewcommand{\theenumiv}          {\@Alph\c@enumiv}
+
+% other symbols
+\newcommand*{\listitemsymbol}      {\labelitemi~}
+\newcommand*{\addresssymbol}       {}
+\newcommand*{\mobilephonesymbol}   {}
+\newcommand*{\fixedphonesymbol}    {}
+\newcommand*{\faxphonesymbol}      {}
+\newcommand*{\emailsymbol}         {}
+\newcommand*{\homepagesymbol}      {}
+\newcommand*{\linkedinsocialsymbol}{}
+\newcommand*{\xingsocialsymbol}    {}
+\newcommand*{\twittersocialsymbol} {}
+\newcommand*{\githubsocialsymbol}  {}
+\newcommand*{\gitlabsocialsymbol}  {}
+\newcommand*{\skypesocialsymbol}   {}
+
+% other
+%------
 % fonts
 \AtBeginDocument{\normalfont\color{color0}}
 
@@ -220,28 +317,83 @@
 \newcommand*{\refname}{Publications}
 \newcommand*{\enclname}{Enclosure}
 
-% loads a style variant
+% makes the footer (normally used both for the resume and the letter)
+% usage: \makefooter
+\newcommand*{\makefooter}{}%
+
+\newcommand*{\@loadmoderncvpackage}[3][]{%
+  \begingroup\edef\x{\endgroup%
+    \noexpand\RequirePackage[#1]{moderncv#2\ifcase#3\or i\or ii\or iii\or iv\or v\or vi\or vii\or viii\or ix\or x\fi}%
+  }\x}
+
+% loads a style variant (a combination of header, body and footer)
 % usage: \moderncvstyle{<style variant name>}
-\newcommand*{\moderncvstyle}[1]{
-  \RequirePackage{moderncvstyle#1}}
-  
+\newcommand*{\moderncvstyle}[2][]{%
+  \RequirePackage[#1]{moderncvstyle#2}}
+
+% loads a header variant
+% usage: \moderncvhead[<optional head option>]{<header variant number>}
+\newcommand*{\moderncvhead}[2][]{%
+  \@loadmoderncvpackage[#1]{head}{#2}}
+
+% loads a body variant
+% usage: \moderncvbody[<optional body option>]{<body variant number>}
+\newcommand*{\moderncvbody}[2][]{%
+  \@loadmoderncvpackage[#1]{body}{#2}}
+
+% loads a footer variant
+% usage: \moderncvfoot[<optional foot option>]{<foot variant number>}
+\newcommand*{\moderncvfoot}[2][]{%
+  \@loadmoderncvpackage[#1]{foot}{#2}}
+
 % loads a color scheme
 % usage: \moderncvcolor{<color scheme name>}
-\newcommand*{\moderncvcolor}[1]{
+\newcommand*{\moderncvcolor}[1]{%
   \RequirePackage{moderncvcolor#1}}
 
 % loads an icons set
 % usage: \moderncvicons{<icon set name>}
-\newcommand*{\moderncvicons}[1]{
+\newcommand*{\moderncvicons}[1]{%
   \RequirePackage{moderncvicons#1}}
 
 % recomputes all automatic lengths
+\newcommand*{\recomputeheadlengths}{\recomputecvheadlengths}
+\newcommand*{\recomputebodylengths}{\recomputecvbodylengths}
+\newcommand*{\recomputefootlengths}{\recomputecvfootlengths}
 \newcommand*{\recomputelengths}{\recomputecvlengths}
 \AtBeginDocument{\recomputelengths{}}
 
+% creates a command if not yet defined
+\newcommand*{\@initializecommand}[2]{%
+  \ifdefined#1
+    \renewcommand{#1}{#2}%
+  \else%
+    \newcommand*{#1}{#2}\fi}
+
 % creates a length if not yet defined
 \newcommand*{\@initializelength}[1]{%
-  \ifdefined#1\else\newlength{#1}\fi}
+  \ifdefined#1
+  \else%
+    \newlength{#1}\fi%
+  \setlength{#1}{0pt}}
+
+% creates a box if not yet defined
+\newcommand*{\@initializebox}[1]{%
+  \ifdefined#1
+    \savebox{#1}{}%
+  \else%
+    \newsavebox{#1}\fi}
+
+% creates an if switch if not yet defined
+\newcommand*{\@initializeif}[1]{%
+%  \ifdefined#1% not working due to the nested \if
+%  \else%
+    \newif#1%\fi
+  }
+
+% custom strut for spacing; the first argument is the vertical offset of the strut, the second its total height
+\newcommand*{\@moderncvstrut}[2]{%
+  \rule[-#1]{0pt}{#2}}
 
 
 %-------------------------------------------------------------------------------
@@ -250,6 +402,9 @@
 % elements
 % defines one's picture (optional)
 % usage: photo[<picture width>][<picture frame thickness>]{<picture filename>}
+\NewDocumentCommand{\photo}{O{64pt}O{0.4pt}m}{\def\@photowidth{#1}\def\@photoframewidth{#2}\def\@photo{#3}}
+\newcommand*{\quote}[1]{\def\@quote{#1}}
+
 % fonts
 \newcommand*{\namefont}{}
 \newcommand*{\titlefont}{}
@@ -259,6 +414,12 @@
 \newcommand*{\subsectionfont}{}
 \newcommand*{\hintfont}{}
 \newcommand*{\pagenumberfont}{\addressfont\itshape}
+% fake small caps - cfr http://tex.stackexchange.com/questions/55664/fake-small-caps-with-xetex-fontspec
+%\def\fakesc{\bgroup\obeyspaces\fakescaux}
+%\def\fakescaux#1{\fakescauxii #1\relax\relax\egroup}
+%\def\fakescauxii#1{%
+%\ifx\relax#1\else \ifcat#1\@sptoken{} \expandafter\expandafter\expandafter\fakescauxii\else
+%\ifnum`#1=\uccode`#1 {\normalsize #1}\else {\footnotesize \uppercase{#1}}\fi \expandafter\expandafter\expandafter\fakescauxii\expandafter\fi\fi}
 
 % styles
 \newcommand*{\namestyle}[1]{{\namefont#1}}
@@ -271,15 +432,21 @@
 \newcommand*{\pagenumberstyle}[1]{{\pagenumberfont#1}}
 
 % recompute all resume lengths
-\newcommand*{\recomputecvlengths}{}
+\newcommand*{\recomputecvheadlengths}{}
+\newcommand*{\recomputecvbodylengths}{}
+\newcommand*{\recomputecvfootlengths}{}
+\newcommand*{\recomputecvlengths}{%
+  \recomputecvheadlengths%
+  \recomputecvbodylengths%
+  \recomputecvfootlengths}
 
 % internal maketitle command to issue a new line only when required
 \newif\if@firstdetailselement\@firstdetailselementtrue
-\newcommand*{\makenewline}{
+\newcommand*{\makenewline}[1][0pt]{%
   \if@firstdetailselement%
     \strut% to ensure baseline alignment, e.g. with when put in the margin vs sections that also contains a \strut
   \else%
-    \\\fi%
+    \\[#1]\fi%
   \@firstdetailselementfalse}
 
 % makes the resume title
@@ -340,6 +507,22 @@
     {\href{mailto:#2}{#2}}%
     {\href{mailto:#2}{#1}}}
 
+% makes a tel hyperlink
+% usage: \tellink[optional text]{link}
+\newcommand*{\tellink}[2][]{%
+  \ifthenelse{\equal{#1}{}}%
+    {\expandafter\onlynumberslink\expandafter{#2}{#2}}%
+    {\expandafter\onlynumberslink\expandafter{#2}{#1}}}
+
+\ExplSyntaxOn
+\tl_new:N \l_onlynumberslink_tl
+\cs_new:Npn \onlynumberslink #1 #2  {
+    \tl_set:Nn \l_onlynumberslink_tl {#1}
+    \regex_replace_all:nnN {[^0-9+]} {} \l_onlynumberslink_tl
+    \href{ tel\token_to_str:N : \tl_use:N \l_onlynumberslink_tl}{ #2 }
+}
+\ExplSyntaxOff
+
 % cvcolumns environment, where every column is created through \cvcolumn
 % usage: \begin{cvcolumns}
 %          \cvcolumn[width]{head}{content}
@@ -361,7 +544,7 @@
     \setcounter{cvcolumnsautowidthcounter}{0}%
     \setlength{\cvcolumnsautowidth}{\cvcolumnsdummywidth}%
     \setlength{\cvcolumnautowidth}{0pt}%
-    \@cvcolumns@head@emptytrue}%
+    \@cvcolumns@head@emptytrue\ignorespaces}%
   {% at environment closing: typeset environment
     % compute the width of each cvcolumn, considering a spacing of \separatorcolumnwidth and the columns with set width
     \ifnum\thecvcolumnscounter>0%
@@ -382,7 +565,9 @@
         \g@addto@macro\cvcolumns@def{@{\hspace*{\separatorcolumnwidth}}}%
         \g@addto@macro\cvcolumns@head{&}%
         \g@addto@macro\cvcolumns@content{&}\fi%
-      \expandafter\g@addto@macro\expandafter\cvcolumns@def\expandafter{\csname cvcolumn\roman{tmpiteratorcounter}@def\endcsname}%
+%      \expandafter\g@addto@macro\expandafter\cvcolumns@def\expandafter{\csname cvcolumn\roman{tmpiteratorcounter}@def\endcsname}%      % this creates issues with the colortbl" package (loaded by xcolor when passing the "table" option) as the column definitions passed to \begin{tabular} contains \cvcolumn<i>@def references that it doesn't understand; the next 2 lines expand \cvcolumn@def to the point it doesn't
+      \edef\tmpcvcolumn@def{\csname cvcolumn\roman{tmpiteratorcounter}@def\endcsname}%
+      \expandafter\g@addto@macro\expandafter\cvcolumns@def\expandafter{\tmpcvcolumn@def}%
       \expandafter\g@addto@macro\expandafter\cvcolumns@head\expandafter{\csname cvcolumn\roman{tmpiteratorcounter}@head\endcsname}%
       \expandafter\g@addto@macro\expandafter\cvcolumns@content\expandafter{\csname cvcolumn\roman{tmpiteratorcounter}@content\endcsname}%
       \stepcounter{tmpiteratorcounter}%
@@ -400,10 +585,13 @@
 %      \repeat%
     % create the tabular
     \cvitem{}{%
-      \begin{tabular}{\cvcolumns@def}%
+%      \begin{tabular}{\cvcolumns@def}% this conflicts with the "colortbl" package (loaded by xcolor when passing the "table" option), and requires the below 2 lines to expand \cvcolumns@def
+      \def\begincvcolumns{\begin{tabular}[t]}% "[t]" is required for some body styles; the default alignment is "[c]"
+      \expandafter\begincvcolumns\expandafter{\cvcolumns@def}%
         \if@cvcolumns@head@empty\else%
-          \cvcolumns@head\\[-.8em]%
-          {\color{color1}\rule{\maincolumnwidth}{.25pt}}\\\fi%
+          \cvcolumns@head%\\[-.8em]%
+%          {\color{color1}\rule{\maincolumnwidth}{.25pt}}%
+          \\\fi%
         \cvcolumns@content%
       \end{tabular}}}
 
@@ -423,7 +611,8 @@
       \expandafter\expandafter\expandafter\def\expandafter\csname cvcolumn\roman{cvcolumnscounter}@head\endcsname{\protect\parbox[b]{#1\cvcolumnswidth}{\protect\subsectionstyle{#2}}}}%
   \ifthenelse{\equal{#2}{}}{}{\@cvcolumns@head@emptyfalse}%
   \expandafter\expandafter\expandafter\def\expandafter\csname cvcolumn\roman{cvcolumnscounter}@content\endcsname{\protect\cvcolumncell{#3}}%
-  \stepcounter{cvcolumnscounter}}
+  \stepcounter{cvcolumnscounter}%
+  \ignorespaces}
 
 % internal cvcolumncell command, that enables a cvcolumn cell to contain paragraph commands (lists, newlines, etc)
 \newcommand*{\cvcolumncell}[1]{{% put cell inside a group, so that command redefinitions are only local
@@ -445,6 +634,10 @@
 \newenvironment{thebibliography}[1]{}{}
 \newcommand*{\newblock}{\hskip .11em\@plus.33em\@minus.07em}
 \let\@openbib@code\@empty
+%% fix a bug (hardcoded bib label) in \@bibitem
+%\renewcommand\@bibitem[1]{%
+%  \item\if@filesw \immediate\write\@auxout
+%    {\string\bibcite{#1}{\theenumiv}}\fi\ignorespaces}% replaced "\the\value{\@listctr}" with "\theenumiv"
 
 % itemize, enumerate and description environment
 \setlength{\leftmargini}   {1em}
@@ -476,17 +669,49 @@
   July\or August\or September\or October\or November\or December\fi
   \space\number\day, \number\year}
 
-\newcommand{\namesection}[3]{ % Defines the command for the main heading
-\centering{ % Center the name
-\fontsize{35pt}{55pt} % Font size
-\fontspec[Path = fonts/lato/]{Lato-Hai}\selectfont #1 % First name font
-\fontspec[Path = fonts/lato/]{Lato-Lig}\selectfont #2 % Last name font
-} \\[2pt] % Whitespace between the name and contact information
-\centering{ % Center the contact information
-\fontspec[Path = fonts/lato/]{Lato-Lig}\fontsize{11pt}{14pt}\selectfont #3} % Contact information font
-\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}} % Horizontal rule
-\vspace{-20pt} % Reduce whitespace after the rule slightly
-}
+%\newcommand{\widthofautobox}[1]{%
+%  \widthof{\begin{tabular}{@{}l@{}}#1\end{tabular}}}
+
+%\newcommand{\autobox}[2][b]{%
+%  \parbox[#1]{\widthofautobox{#2}}{#2}}
+
+
+%-------------------------------------------------------------------------------
+%                letter design commands definitions
+%-------------------------------------------------------------------------------
+% elements
+\newcommand*{\recipient}[2]{\def\@recipientname{#1}\def\@recipientaddress{#2}}
+\renewcommand*{\date}[1]{\def\@date{#1}}\date{\today}
+\newcommand*{\opening}[1]{\def\@opening{#1}}
+\newcommand*{\closing}[1]{\def\@closing{#1}}
+\newcommand*{\enclosure}[2][]{%
+  % if an optional argument is provided, use it to redefine \enclname
+  \ifthenelse{\equal{#1}{}}{}{\renewcommand*{\enclname}{#1}}%
+  \def\@enclosure{#2}}
+
+% recompute all letter lengths
+\newcommand*{\recomputeletterheadlengths}{}
+\newcommand*{\recomputeletterbodylengths}{}
+\newcommand*{\recomputeletterfootlengths}{}
+\newcommand*{\recomputeletterlengths}{%
+  \recomputeletterheadlengths%
+  \recomputeletterbodylengths%
+  \recomputeletterfootlengths}
+
+% makes the letter title
+% usage: \makelettertitle
+\newcommand*{\makelettertitle}{%
+  \makeletterhead%
+  \makeletterfoot}
+\newcommand*{\makeletterhead}{}
+\newcommand*{\makeletterfoot}{}
+
+% makes the letter closing
+% usage: \makeletterclosing
+\newcommand*{\makeletterclosing}{}
 
 
 \endinput
+
+
+%% end of file `moderncv.cls'.
