Updates from Overleaf

--- a/Resume.tex
+++ b/Resume.tex
@@ -20,7 +20,7 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{fontspec}
-\usepackage{fontawesome}
+\usepackage{moderncvcompatibility}
 \usepackage[scale=1, top=1cm, left=0.7cm, right=0.7cm]{geometry}
 
 \setmainfont[Path = fonts/lato/,BoldItalicFont=OpenSans-Italic,BoldFont=OpenSans-Regular,ItalicFont=Lato-LigIta]{Lato-Lig}
@@ -38,8 +38,10 @@
 \begin{document}
 
 \namesection{Sameet}{Sapra}{
-\urlstyle{same} http://sameetsapra.com \\
-sameetandpotatoes@gmail.com}
+    \urlstyle{same} http://sameetsapra.com \\
+    \emailsymbol{sameetandpotatoes@gmail.com}
+    \social[github]{sameetandpotatoes}
+}
 
 \section{Education}
 
