Add TA experience

--- a/Resume.tex
+++ b/Resume.tex
@@ -55,7 +55,7 @@
 \cventry{Fall 2015 - \\ Spring 2019}{University of Illinois at Urbana Champaign}{GPA: 3.95/4.0}{}{}{
 \begin{itemize}
 \item M.C.S in Computer Science, B.S in Computer Science, Minor in Mathematical Statistics
-\item Coursework: Algorithms and Graph Theory, Distributed Systems, Computer Security, Networking, Systems Programming, Data Structures, Computer Architecture, Artificial Intelligence, Databases
+\item Coursework: Computer Security, Distributed Systems, Networking, Systems Programming, Algorithms and Graph Theory, Data Structures, Digital Forensics, Artificial Intelligence, Databases
 \item Honors: James Scholar, Dean's List
 \end{itemize}}
 
@@ -66,6 +66,13 @@
 \cvdoubleitem{Hardware}{Arduino, Raspberry Pi}{Tools}{Git, ViM, AWS, Tensorflow}
 
 \section{Experience}
+
+\entry[0.10em]{Aug 2018 - \\ May 2019}{Teaching Assistant}{Computer Security I}{Professor Michael Bailey}{Urbana, IL}{
+\begin{itemize}
+    \item Teach a classroom of students on basic application, web, and network security concepts 
+    \item Write, distribute, grade, and test students over security programming assignments
+\end{itemize}
+}
 
 \entry[0.10em]{Summer 2018}{Software Engineer Intern}{Facebook}{Menlo Park}{CA}{
 \mybitem{\textit{Haskell, C++, Python}}
