Add TA position

--- a/Resume.tex
+++ b/Resume.tex
@@ -44,7 +44,7 @@
 \begin{document}
 
 \namesection{Sameet}{Sapra}{
-  \homepagesymbol{http://sameetsapra.com} \\
+  \homepagesymbol{sameetsapra.com} \\
     \emailsymbol{sameetandpotatoes@gmail.com}
   | \githubsocialsymbol{\href{http://www.github.com/sameetandpotatoes}{sameetandpotatoes}}
   | \linkedinsocialsymbol{\href{http://www.linkedin.com/in/sameet.sapra}{sameet.sapra}}
@@ -61,20 +61,20 @@
 
 \section{Programming Languages}
 
-\cvdoubleitem{High Level}{Python, Java, Ruby, C++}{System}{C, Bash, MIPS Assembly}
-\cvdoubleitem{Web}{SQL, Rails, React.js, Django, Angular.js}{Math}{numpy, LaTeX}
-\cvdoubleitem{Hardware}{Arduino, Raspberry Pi}{Tools}{Git, ViM, AWS, Tensorflow}
+\cvdoubleitem{High Level}{C++, Python, Golang, Java}{System}{C, Bash, MIPS Assembly}
+\cvdoubleitem{Web}{SQL, Django, React.js, Rails, Angular.js}{Math}{numpy, LaTeX}
+\cvdoubleitem{Hardware}{Arduino, Raspberry Pi}{Tools}{Git, ViM, AWS}
 
 \section{Experience}
 
-\entry[0.10em]{Aug 2018 - \\ May 2019}{Teaching Assistant}{Computer Security I}{Professor Michael Bailey}{Urbana, IL}{
+\entry[0.11em]{Fall 2018 - \\ Spring 2019}{Teaching Assistant}{Computer Security I}{Professor Michael Bailey}{Urbana, IL}{
 \begin{itemize}
     \item Teach a classroom of students on basic application, web, and network security concepts 
     \item Write, distribute, grade, and test students over security programming assignments
 \end{itemize}
 }
 
-\entry[0.10em]{Summer 2018}{Software Engineer Intern}{Facebook}{Menlo Park}{CA}{
+\entry[0.11em]{Summer 2018}{Software Engineer Intern}{Facebook}{Menlo Park}{CA}{
 \mybitem{\textit{Haskell, C++, Python}}
 \begin{itemize}
     \item Support feature aggregation to enable a 10-fold increase in reach across data warehouse
@@ -82,31 +82,30 @@
     \item Record feature counts to identify and label user data on a data discovery platform
 \end{itemize}}
 
-\entry[0.10em]{Summer 2017}{Software Engineer Intern}{Cask Data}{Palo Alto}{CA}{
+\entry[0.11em]{Summer 2017}{Software Engineer Intern}{Cask Data}{Palo Alto}{CA}{
 \mybitem{\textit{Java, Maven}}
 \begin{itemize}
-  \item Test and help release version 4.2 of CDAP, a data application platform for building big data applications on top of a local, distributed, or cloud sandbox environment
-  \item Add the ability to schedule data pipelines based on the status of other pipelines on CDAP
+  \item Test and release version 4.2 of CDAP, a platform for building big data applications on top of a local, distributed, or cloud environment
+  \item Add the ability to schedule dependent data pipelines on CDAP
   \item Implement transactional recording of all program states on the platform using Apache Twill
 \end{itemize}}
 
-\entry[0.10em]{Fall 2015 - \\ Winter 2016}{Full Stack Web Developer}{Cognitive Computation Group}{Champaign}{IL}{
+\entry[0.11em]{Fall 2015 - \\ Spring 2017}{Full Stack Web Developer}{Cognitive Computation Group}{Champaign}{IL}{
 \mybitem{\textit{Angular.js, PHP}}
 \begin{itemize}
-\item Refactor the research tools and demos on the website in PHP and Angular.js
-\item Improve the performance and reliability of the content management system for website administrators
+\item Improve the performance and reliability of the research tools and demos on the website in PHP and Angular.js
 \end{itemize}}
 
-\entry[0.10em]{Summer 2016}{Software Engineer Intern}{NextCapital}{Chicago}{IL}{
+\entry[0.11em]{Summer 2016}{Software Engineer Intern}{NextCapital}{Chicago}{IL}{
 \mybitem{\textit{Ruby on Rails, Java, React.js}}
 \begin{itemize}
 \item Directed front end team to migrate to React and Redux and incorporate a component-based architecture
 \item Interfaced with SQS and Lambda services on AWS to enroll new users onto the platform
-\item Refactored financial institution data import stack in Ruby to securely store confidential user information
+\item Refactored financial institution data import stack to securely store confidential user information
 %\item Built internal dashboard with PivotalTracker's API to track progress for major milestones
 \end{itemize}}
 
-% \entry[0.10em]{Fall 2015 - Spring 2016}{Undergraduate Research Assistant}{Department of Computer Science}{Champaign}{IL}{
+% \entry[0.11em]{Fall 2015 - Spring 2016}{Undergraduate Research Assistant}{Department of Computer Science}{Champaign}{IL}{
 % \mybitem{\textit{C++, Networking}}
 % \begin{itemize}
 %   \item Documented sample packets for network protocols
